# variation_number

./: .gitignore  README.md  caos.py  pyproject.toml  requirements.txt  setup.py  vn.py
tests/: APP_refseq_protein.fasta  NP_000475.1.fasta  NP_000475.1.nex  NP_000475.1_aligned.fasta  NP_000475.1_getTree.cmd  NP_000475.1_tree.tree  NP_000475.1_trees.nex  vn_NP_000475.1.txt
variation_number/: __init__.py  vn.py
vn/: caos.py
