[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "variation_number"
version = "0.2.1"
authors = [
  { name="Jiaying Lai", email="jiaying_lai@brown.edu" },
]
description = "A package for computing variation numbers"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jiaying2508/variation_number"
